# play-with-actix-web

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: error.rs  handlers.rs  main.rs  models.rs  store.rs  utils.rs
backend/src/entities/: like.rs  tweet.rs  user.rs
backend/src/graphql/: mod.rs  mutation.rs  query.rs
frontend/: codegen.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(private)/: layout.tsx  page.tsx
frontend/app/(private)/_components/: Comments.tsx  Timeline.tsx  TweetComments.tsx
frontend/app/(private)/profile/[id]/: page.tsx
frontend/app/(private)/profile/[id]/_components/: ProfileView.tsx
frontend/app/(public)/login/: page.tsx
frontend/app/(public)/register/: page.tsx
frontend/app/_components/: Comments.tsx  Timeline.tsx  TweetComments.tsx
frontend/app/_hooks/: useTweets.ts
frontend/app/actions/: auth.ts  tweets.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts  auth-context.tsx  dal.ts  fetcher.ts  session.ts  storage.ts  types.ts
frontend/lib/graphql/: client.ts  provider.tsx
frontend/lib/graphql/operations/: fragments.graphql  mutations.graphql  queries.graphql
src/: error.rs  handlers.rs  main.rs  models.rs  store.rs  templates.rs  utils.rs
src/entities/: mod.rs
static/css/: module.css
templates/: base.html  index.html  login.html  register.html
